# Gtk-and-Magick-image-processor-C-

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.txt  run.sh
image_processor/: CMakeLists.txt
image_processor/include/: configuration.h  image.h  ui.h  watermark.h
image_processor/src/: image.cpp  main.cpp  ui.cpp  watermark.cpp
